Home page with template pages

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>J&C Group | Plumbing & Home Improvements</title>
+    <title>About - J&C Group | Plumbing & Home Improvements</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,8 +59,8 @@
                                 </svg>
                             </a>
                             <div class="flex flex-col items-start justify-center w-full space-x-6 text-center lg:space-x-8 md:w-2/3 md:mt-0 md:flex-row md:items-center">
-                                <a href="/" class="inline-block w-full py-2 mx-0 ml-6 font-medium text-left text-gray-900 md:ml-0 md:w-auto md:px-0 md:mx-2 lg:mx-3 md:text-center">Home</a>
-                                <a href="/about.html" class="inline-block w-full py-2 mx-0 font-medium text-left text-gray-900 sm:text-white md:w-auto md:px-0 md:mx-2 hover:text-black lg:mx-3 md:text-center">About</a>
+                                <a href="/" class="inline-block w-full py-2 mx-0 font-medium text-left text-gray-900 sm:text-white md:w-auto md:px-0 md:mx-2 hover:text-black lg:mx-3 md:text-center">Home</a>
+                                <a href="/about.html" class="inline-block w-full py-2 mx-0 ml-6 font-medium text-left text-gray-900 md:ml-0 md:w-auto md:px-0 md:mx-2 lg:mx-3 md:text-center">About</a>
                                 <a href="/services.html" class="inline-block w-full py-2 mx-0 font-medium text-left text-gray-900 sm:text-white md:w-auto md:px-0 md:mx-2 hover:text-black lg:mx-3 md:text-center">Services</a>
                                 <a href="/contact.html" class="inline-block w-full py-2 mx-0 font-medium text-left text-gray-900 sm:text-white md:w-auto md:px-0 md:mx-2 hover:text-black lg:mx-3 md:text-center">Contact</a>
                             </div>
