--- a/index.html
+++ b/index.html
@@ -30,22 +30,8 @@
                     <div class="top-0 left-0 items-start hidden w-full h-full p-4 text-sm bg-gray-900 bg-opacity-50 md:items-center md:w-3/4 md:absolute lg:text-base md:bg-transparent md:p-0 md:relative md:flex"
                         :class="{'flex fixed': showMenu, 'hidden': !showMenu }">
                         <div class="flex-col w-full h-auto overflow-hidden bg-white rounded-lg md:bg-transparent md:overflow-visible md:rounded-none md:relative md:flex md:flex-row">
-                            <a href="#_" class="inline-flex items-center block w-auto h-16 px-6 text-xl font-black leading-none text-gray-900 md:hidden">
-                                <svg class="w-auto h-5" viewBox="0 0 355 99" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <defs>
-                                        <path d="M119.1 87V66.4h19.8c34.3 0 34.2-49.5 0-49.5-11 0-22 .1-33 .1v70h13.2zm19.8-32.7h-19.8V29.5h19.8c16.8 0 16.9 24.8 0 24.8zm32.6-30.5c0 9.5 14.4 9.5 14.4 0s-14.4-9.5-14.4 0zM184.8 87V37.5h-12.2V87h12.2zm22.8 0V61.8c0-7.5 5.1-13.8 12.6-13.8 7.8 0 11.9 5.7 11.9 13.2V87h12.2V61.1c0-15.5-9.3-24.2-20.9-24.2-6.2 0-11.2 2.5-16.2 7.4l-.8-6.7h-10.9V87h12.1zm72.1 1.3c7.5 0 16-2.6 21.2-8l-7.8-7.7c-2.8 2.9-8.7 4.6-13.2 4.6-8.6 0-13.9-4.4-14.7-10.5h38.5c1.9-20.3-8.4-30.5-24.9-30.5-16 0-26.2 10.8-26.2 25.8 0 15.8 10.1 26.3 27.1 26.3zM292 56.6h-26.6c1.8-6.4 7.2-9.6 13.8-9.6 7 0 12 3.2 12.8 9.6zm41.2 32.1c14.1 0 21.2-7.5 21.2-16.2 0-13.1-11.8-15.2-21.1-15.8-6.3-.4-9.2-2.2-9.2-5.4 0-3.1 3.2-4.9 9-4.9 4.7 0 8.7 1.1 12.2 4.4l6.8-8c-5.7-5-11.5-6.5-19.2-6.5-9 0-20.8 4-20.8 15.4 0 11.2 11.1 14.6 20.4 15.3 7 .4 9.8 1.8 9.8 5.2 0 3.6-4.3 6-8.9 5.9-5.5-.1-13.5-3-17-6.9l-6 8.7c7.2 7.5 15 8.8 22.8 8.8z" id="a"></path>
-                                    </defs>
-                                    <g fill="none" fill-rule="evenodd">
-                                        <g fill="currentColor">
-                                            <path d="M19.742 49h28.516L68 83H0l19.742-34z"></path>
-                                            <path d="M26 69h14v30H26V69zM4 50L33.127 0 63 50H4z"></path>
-                                        </g>
-                                        <g fill-rule="nonzero">
-                                            <use fill="currentColor" xlink:href="#a"></use>
-                                            <use fill="currentColor" xlink:href="#a"></use>
-                                        </g>
-                                    </g>
-                                </svg>
+                            <a href="/" class="inline-flex items-center block w-auto h-16 px-6 text-xl font-black leading-none text-gray-900 md:hidden">
+                                <img src="./public/img/j-and-c-group-logo.svg" alt="J&C Group Logo" class="h-12 text-gray-900" />
                             </a>
                             <div class="flex flex-col items-start justify-center w-full space-x-6 text-center lg:space-x-8 md:w-2/3 md:mt-0 md:flex-row md:items-center">
                                 <a href="/" class="inline-block w-full px-4 py-2 mx-0 ml-6 font-medium text-left md:ml-0 md:w-auto md:mx-2 lg:mx-3 md:text-center text-base leading-6 text-white bg-gray-900 rounded-xl">Home</a>
@@ -139,7 +125,7 @@
                     </div>
 
                     <!-- About us -->
-                    <div class="flex flex-col items-start justify-between col-span-5 lg:col-span-7 space-y-4 md:space-y-0">
+                    <div class="flex flex-col items-start justify-between col-span-5 lg:col-span-7 space-y-4 md:space-y-0 px-6 sm:px-0">
                         <hgroup class="text-gray-900">
                             <h2 class="font-medium">About J&C Group</h2>
                             <h3 class="text-4xl lg:text-6xl lg:leading-snug oswald">Elevate your projects with superior quality</h3>
@@ -164,7 +150,7 @@
         <section class="py-20 bg-white">
             <div class="container max-w-6xl mx-auto">
                 <div class="grid grid-cols-4 gap-8 mt-10 sm:grid-cols-10 lg:grid-cols-12 sm:px-8 xl:px-0">
-                    <div class="flex flex-col items-start justify-between col-span-6 space-y-6">
+                    <div class="flex flex-col items-start justify-between col-span-12 sm:col-span-6 space-y-6 px-6 sm:px-0">
                         <h2 class="text-4xl text-gray-900 leading-snug oswald">
                             Our aim is to simplify your life and lighten your load
                         </h2>
@@ -182,8 +168,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-4 lg:col-span-6 space-y-8 overflow-hidden">
-                        <img src="./public/img/person-inspecting.jpg" alt="person inspecting equipment" class="w-full rounded-xl" />
+                    <div class="col-span-12 sm:col-span-4 lg:col-span-6 space-y-8 overflow-hidden">
+                        <img src="./public/img/person-inspecting.jpg" alt="person inspecting equipment" class="w-full sm:rounded-xl" />
                     </div>
                 </div>
             </div>
@@ -197,7 +183,7 @@
         <section class="py-20">
             <div style="background-image: linear-gradient(90deg, #fff 50%, #1a386a 50%);">
                 <div class="mx-auto max-w-7xl">
-                    <div class="grid grid-cols-2 gap-0 items-center justify-between bg-[#1a386a] lg:rounded-s-3xl">
+                    <div class="sm:grid sm:grid-cols-2 gap-0 items-center justify-between bg-[#1a386a] lg:rounded-s-3xl">
                         <div class="p-12 sm:p-16 lg:p-20 text-white">
                             <h2 class="text-3xl lg:text-5xl tracking-wide oswald">Have an Emergency?</h2>
                             <p class="mt-6">Need help with gas leakage or a clogged drain, we offer affordable emergency services that are just a call away.</p>
@@ -228,7 +214,7 @@
         <!-- Services -->
         <section class="py-20 bg-white">
             <div class="container max-w-6xl mx-auto">
-                <div class="sm:px-8 xl:px-0">
+                <div class="px-4 sm:px-8 xl:px-0">
                     <h2 class="text-4xl text-gray-900 leading-snug oswald">Our Services</h2>
                     <p class="mt-2 text-gray-600">Check out our list of awesome services below.</p>
                 </div>
@@ -372,8 +358,8 @@
         </section>
     </main>
 
-    <footer class="mb-14">
-        <div class="bg-[#ffce51] rounded-xl w-full max-w-screen-xl mx-auto px-6 py-4 md:py-10">
+    <footer class="sm:mb-14">
+        <div class="bg-[#ffce51] sm:rounded-xl w-full max-w-screen-xl mx-auto px-6 py-4 md:py-10">
             <div class="sm:flex sm:items-center sm:justify-between">
                 <a href="/" class="flex items-center space-x-2 font-extrabold text-white md:py-0">
                     <img src="./public/img/j-and-c-group-logo.svg" alt="J&C Group Logo" class="h-10" />
